--- a/src/views/client/pages/products/index.pug
+++ b/src/views/client/pages/products/index.pug
@@ -2,6 +2,7 @@ extends ../../layout/default.pug
 
 block main 
     h1(class="tt1")=titlePage
+    p hi branch
 
     //- ul
     //- each item, index in products
