--- a/src/views/client/mixins/box-head.pug
+++ b/src/views/client/mixins/box-head.pug
@@ -1,3 +1,3 @@
 mixin box-head(title)
-    div(class="box-head")
-        header(class="inner-title") #{title}
+    .box-head
+        h2.inner-tiitle #{title}
