--- a/src/views/client/pages/home/index.pug
+++ b/src/views/client/pages/home/index.pug
@@ -1,6 +1,6 @@
 extends ../../layout/default.pug
 
 block main 
-    h1(class="tt1") Trang Chủ
+    h1(class="tt1") #{pageTitle}
     a(href="/admin/dashboard")
         button(type="button" class="btn btn-info") click
