--- a/src/views/client/partials/footer.pug
+++ b/src/views/client/partials/footer.pug
@@ -1,3 +1,3 @@
-mixin footer(title)
-    div(class="box-head")
-        header(class="inner-title") #{title}
+mixin footer()
+    footer.footer
+        | Copyright 2023 PN
