--- a/src/views/client/pages/products/index.pug
+++ b/src/views/client/pages/products/index.pug
@@ -1,9 +1,23 @@
 extends ../../layout/default.pug
+include ../../mixins/box-head.pug
 
 block main 
-    h1(class="tt1")=titlePage
-    p hi branch
+    .container.my-3 
+        .row 
+            .col-12
+                +box-head("Danh Sách Sản Phẩm")
 
+        .row
+            each item in products
+                .col-4.mb-3
+                    .product-item
+                        .inner-image
+                            img(src=item.thumbnail alt=item.title)
+                        .inner-content
+                            h3.inner-title #{item.title}
+                                .inner-price-new #{item.priceNew}$
+                                .inner-price-old #{item.price}$
+                                .inner-discount #{item.discountPercentage}%
     //- ul
     //- each item, index in products
     //- li #{index+1} #{item.title} - #{item.price}$
