--- a/src/views/admin/mixins/fillter-status.pug
+++ b/src/views/admin/mixins/fillter-status.pug
@@ -1,6 +1,6 @@
 mixin fillter-status(fillterStatus)
     each item in fillterStatus
         button(
-            class=`btn btn-sm ml-1 btn-outline-success ${item.class}`
+            class=`btn btn-sm ml-1 btn-outline-success me-2 ${item.class}`
             button-status=item.status
             ) #{item.name}
