--- a/src/views/admin/mixins/search.pug
+++ b/src/views/admin/mixins/search.pug
@@ -10,6 +10,6 @@ mixin search(keyword)
                 )
         .input-group-apped
             button(
-                class="btn btn-success"
+                class="btn btn-success ms-2"
                 type="submit"
             ) Tìm
