--- a/src/views/admin/pages/products/index.pug
+++ b/src/views/admin/pages/products/index.pug
@@ -2,6 +2,7 @@ extends ../../layout/default.pug
 include ../../mixins/fillter-status.pug
 include ../../mixins/search.pug
 include ../../mixins/pagination.pug
+include ../../mixins/form-change-multi.pug
 
 block main 
     h1 Danh sách sản phẩm
@@ -16,13 +17,20 @@ block main
                         .input-group.w-50
                             +search(keyword)
 
-    .card-mb-3
+    .card.mb-3
         .card-header Danh sách
             .card-body
+                +form-change-multi(`${prefixAdmin}/products/change-multi?_method=PATCH`)
+
                 if products.length > 0
-                    table.table.table-hover.table-sm
+                    table(
+                        class="table table-hover table-sm"
+                        checkbox-multi
+                    )
                         thead 
                             tr 
+                                th
+                                    input(type="checkbox" name="checkall")
                                 th STT 
                                 th Hình ảnh
                                 th Tiêu đề
@@ -33,6 +41,12 @@ block main
                         tbody
                             each item, index in products
                                 tr 
+                                    td
+                                        input(
+                                            type="checkbox"
+                                            name="id"
+                                            value=item.id
+                                        )
                                     td #{index+1}
                                     td 
                                         img(
