--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -52,11 +52,43 @@
     color: #fff;
     display: flex;
     padding: 6px 10px;
-    border-bottom: 1px solid #515151;
     text-decoration: none;
 }
 
+.sider .last-trash ul li a {
+    display: flex;
+    padding: 6px 10px;
+    text-decoration: none;
+}
+
+.sider .inner-menu ul li {
+    border-bottom: 1px solid #515151;
+}
+
+.sider .last-trash .ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.sider .last-trash ul li {
+    border-top: 1px solid #515151;
+}
+
+.sider .inner-menu ul li i {
+    padding-left: 15px;
+}
+
+.sider .last-trash ul li {
+    padding-left: 15px;
+}
+
 .sider .inner-menu ul li a:hover {
+    text-decoration: underline;
+    text-underline-offset: 5px;
+}
+
+.sider .last-trash ul li a:hover {
     text-decoration: underline;
     text-underline-offset: 5px;
 }
