--- a/src/views/client/pages/home/index.pug
+++ b/src/views/client/pages/home/index.pug
@@ -1,4 +1,40 @@
 extends ../../layout/default.pug
 
 block main 
-    h1(class="tt1") #{pageTitle}
+    #carouselExampleCaptions.carousel.slide
+        .carousel-indicators
+            button.active(type='button' data-bs-target='#carouselExampleCaptions' data-bs-slide-to='0' aria-current='true' aria-label='Slide 1')
+            button(type='button' data-bs-target='#carouselExampleCaptions' data-bs-slide-to='1' aria-label='Slide 2')
+        .carousel-inner
+            .carousel-item.active
+                img.vh-50.d-block.w-100(src='/images/carousel/carousel-2.png' alt='1')
+            .carousel-item
+                img.vh-50.d-block.w-100(src='images/carousel/carousel-3.png' alt='2')
+        button.carousel-control-prev(type='button' data-bs-target='#carouselExampleCaptions' data-bs-slide='prev')
+            span.block.d-flex.align-items-center.justify-content-center
+                pan.carousel-control-prev-icon(aria-hidden='true')
+            span.visually-hidden Previous
+        button.carousel-control-next(type='button' data-bs-target='#carouselExampleCaptions' data-bs-slide='next')
+            span.block.d-flex.align-items-center.justify-content-center
+                span.carousel-control-next-icon(aria-hidden='true')
+            span.visually-hidden Next
+    hr
+    .marquee-container
+        .marquee
+            h4
+                | Khuyến mãi mùa hè giảm giá 40% mọi thứ
+                span - 
+                | Giảm giá tới 30% cho hàng mới về
+                span - 
+                | Bộ sưu tập kính tốt nhất năm 2024
+                span - 
+                | Giảm giá cuối mùa phiên bản 2024
+                span - 
+                | Khuyến mãi mùa hè giảm giá 40% mọi thứ
+                span - 
+                | Giảm giá tới 30% cho hàng mới về
+                span - 
+                | Bộ sưu tập kính tốt nhất năm 2024
+                span - 
+                | Giảm giá cuối mùa phiên bản 2024
+    hr
