--- a/src/views/admin/pages/products/index.pug
+++ b/src/views/admin/pages/products/index.pug
@@ -91,6 +91,10 @@ block main
                                                 data-id=item.id
                                                 ) Dừng hoạt động
                                     td  
+                                        a(
+                                            href=`${prefixAdmin}/products/detail/${item.id}` 
+                                            class="btn btn-secondary btn-sm me-2"
+                                            ) Chi tiết
                                         button(class="btn btn-warning btn-sm") Sửa
                                         button(
                                             class=`btn ${nameTitle.classBtn} btn-sm ms-2`
