--- a/src/views/client/pages/products/index.pug
+++ b/src/views/client/pages/products/index.pug
@@ -12,12 +12,13 @@ block main
                 .col-4.mb-3
                     .product-item
                         .inner-image
-                            img(src=item.thumbnail alt=item.title)
+                            img(src=item.thumbnail alt=item.title style="width: 100px")
                         .inner-content
-                            h3.inner-title #{item.title}
-                                .inner-price-new #{item.priceNew}$
-                                .inner-price-old #{item.price}$
-                                .inner-discount #{item.discountPercentage}%
+                            h3.inner-title
+                                a(href=`/products/${item.slug}`) #{item.title}
+                            .inner-price-new #{item.priceNew}$
+                            .inner-price-old #{item.price}$
+                            .inner-discount #{item.discountPercentage}%
     //- ul
     //- each item, index in products
     //- li #{index+1} #{item.title} - #{item.price}$
