--- a/src/views/client/pages/home/index.pug
+++ b/src/views/client/pages/home/index.pug
@@ -7,9 +7,9 @@ block main
             button(type='button' data-bs-target='#carouselExampleCaptions' data-bs-slide-to='1' aria-label='Slide 2')
         .carousel-inner
             .carousel-item.active
-                img.vh-50.d-block.w-100(src='/images/carousel/carousel-2.png' alt='1')
+                img.vh-50.d-block.w-100(src='https://res.cloudinary.com/deca0oo5q/image/upload/v1727712809/w1x3870cls4tnqprmrfr.jpg' alt='1')
             .carousel-item
-                img.vh-50.d-block.w-100(src='images/carousel/carousel-3.png' alt='2')
+                img.vh-50.d-block.w-100(src='https://res.cloudinary.com/deca0oo5q/image/upload/v1727712826/m6zdckmqlavra9f0sm69.jpg' alt='2')
         button.carousel-control-prev(type='button' data-bs-target='#carouselExampleCaptions' data-bs-slide='prev')
             span.block.d-flex.align-items-center.justify-content-center
                 pan.carousel-control-prev-icon(aria-hidden='true')
