--- a/src/views/admin/layout/default.pug
+++ b/src/views/admin/layout/default.pug
@@ -22,4 +22,8 @@ html
         script(src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous")
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous")
 
-        script(src="/admin/js/script.js")
+        // Script element sourcing TinyMCE
+        script(src="/tinymce/tinymce.min.js" type="application/javascript")
+        script(src="/admin/js/tinymce-config.js" type="application/javascript") 
+
+        script(src="/admin/js/script.js" type="application/javascript")
