--- a/src/views/admin/partials/sider.pug
+++ b/src/views/admin/partials/sider.pug
@@ -6,8 +6,11 @@ mixin sider()
                     i(class="fa-solid fa-house-chimney fs-6")
                     a(href=`${prefixAdmin}/dashboard`) Tổng quan
                 li.d-flex.align-items-center
-                    i(class="fa-solid fa-boxes-stacked fs-6")
+                    i(class="fa-solid fa-box fs-6")
                     a(href=`${prefixAdmin}/products`) Sản phẩm
+                li.d-flex.align-items-center
+                    i(class="fa-solid fa-boxes-stacked fs-6")
+                    a(href=`${prefixAdmin}/products-category`) Danh mục sản phẩm
 
         .last-trash.align-items-start.flex-column.mb-1
             ul.list-group
