--- a/src/views/admin/pages/products-category/create.pug
+++ b/src/views/admin/pages/products-category/create.pug
@@ -1,4 +1,5 @@
 extends ../../layout/default
+include ../../mixins/select-tree.pug
 
 block main
     h1(class="mb-4") Thêm danh mục sản phẩm
@@ -20,12 +21,21 @@ block main
             )
         div(class="form-group")
             label(for="parent_id") Danh mục cha
-            input(
-                type="text"
-                class="form-control"
-                id="parent_id"
+            //- input(
+            //-     type="text"
+            //-     class="form-control"
+            //-     id="parent_id"
+            //-     name="parent_id"
+            //- )
+            select(
                 name="parent_id"
+                id="parent_id"
+                class="form-control"
             )
+                option(value="") -- Chọn Danh mục --
+                if(records)
+                    +select-tree(records)(records)
+
         div(class="form-group")
             label(for="description") Mô tả
             textarea(
