--- a/src/views/admin/pages/products-category/index.pug
+++ b/src/views/admin/pages/products-category/index.pug
@@ -1,4 +1,5 @@
 extends ../../layout/default
+include ../../mixins/table-tree
 
 block main 
     h1 Danh mục sản phẩm 
@@ -30,59 +31,4 @@ block main
                                     th Hành động
 
                             tbody
-                                each item, index in records
-                                    tr 
-                                        td
-                                            input(
-                                                type="checkbox"
-                                                name="id"
-                                                value=item.id
-                                            )
-                                        td #{index+1}
-                                        td 
-                                            img(
-                                                src=item.thumbnail
-                                                alt=item.title
-                                                width="100px"
-                                                height="auto"
-                                            )
-                                        td #{item.title}
-                                        td
-                                            input(
-                                                type="number"
-                                                value=item.position
-                                                style="width: 60px"
-                                                min="1"
-                                                name="position"
-                                            )
-                                        td
-                                            if(item.status == "active")
-                                                a(
-                                                    href="javascript:;" 
-                                                    class="badge rounded-pill text-bg-success"
-                                                    button-change-status
-                                                    data-status=item.status
-                                                    data-id=item.id
-                                                    ) Hoạt động
-                                            else
-                                                a(
-                                                    href="javascript:;" 
-                                                    class="badge rounded-pill text-bg-danger"
-                                                    button-change-status
-                                                    data-status=item.status
-                                                    data-id=item.id
-                                                    ) Dừng hoạt động
-                                        td  
-                                            a(
-                                                href=`${prefixAdmin}/products-category/detail/${item.id}` 
-                                                class="btn btn-secondary btn-sm me-2"
-                                                ) Chi tiết
-                                            button(
-                                                href=`${prefixAdmin}/products-category/edit/${item.id}`
-                                                class="btn btn-warning btn-sm"
-                                                ) Sửa
-                                            button(
-                                                class=`btn btn-danger btn-sm ms-2`
-                                                button-delete
-                                                data-id=item.id
-                                                ) Xoá
+                                +table-tree(records)
