--- a/src/views/admin/pages/products/edit.pug
+++ b/src/views/admin/pages/products/edit.pug
@@ -1,35 +1,24 @@
 extends ../../layout/default
-include ../../mixins/select-tree.pug
 
-block main
-    h1(class="mb-4") Thêm danh mục sản phẩm
+block main 
+    h1(class="mb-4") #{pageTitle}
 
     form(
-        action=`${prefixAdmin}/products-category/create`
+        action=`${prefixAdmin}/products/create`
         id="form-create-product"
         method="POST"
         enctype="multipart/form-data"
     )
         div(class="form-group")
-            label(for="parent_id") Tiêu đề
+            label(for="title") Tiêu đề
             input(
                 type="text"
                 class="form-control"
                 id="title"
                 name="title"
                 required
+                value=product.title
             )
-        div(class="form-group")
-            label(for="parent_id") Danh mục cha
-            select(
-                name="parent_id"
-                id="parent_id"
-                class="form-control"
-            )
-                option(value="") -- Chọn Danh mục --
-                if(records)
-                    +select-tree(records)
-
         div(class="form-group")
             label(for="description") Mô tả
             textarea(
@@ -37,6 +26,37 @@ block main
                 class="form-control textarea-mce"
                 id="des"
                 name="description"
+                value=product.description
+            ) #{product.description}
+        div(class="form-group")
+            label(for="price") Giá
+            input(
+                type="number"
+                class="form-control"
+                id="price"
+                name="price"
+                min="0"
+                value=product.price
+            )
+        div(class="form-group")
+            label(for="quantity") % Giảm giá
+            input(
+                type="number"
+                class="form-control"
+                id="discount"
+                name="discountPercentage"
+                value=product.discountPercentage
+                min="0"
+            )
+        div(class="form-group mb-2")
+            label(for="stock") Số lượng
+            input(
+                type="number"
+                class="form-control"
+                id="stock"
+                name="stock"
+                value=product.stock
+                min="0"
             )
         div(
             class="form-group row align-items-center"
@@ -51,13 +71,20 @@ block main
                 accept="image/*"
                 upload-image-input
             )
-            div(clear-image-preview class="d-none")
+            div(
+                class=`clear-image-preview ${product.thumbnail ? '' : 'd-none'}`
+                clear-image-preview
+            )
                 img(
-                    src=""
+                    src=product.thumbnail
                     upload-image-preview
                     class="image-preview"
-                    )
-                button(class="btn btn-danger upload-image-clear d-none" upload-image-clear)
+                )
+                button(
+                    type="button"
+                    class=`btn btn-danger upload-image-clear ${product.thumbnail ? '' : 'd-none'}`
+                    upload-image-clear
+                )
                     i(class="fas fa-times")
 
         div(class="form-group")
@@ -69,6 +96,7 @@ block main
                 name="position"
                 placeholder="Tự động tăng"
                 min="1"
+                value=product.position
             )
         div(class="form-group formp-check form-check-inline")
             input(
@@ -77,7 +105,7 @@ block main
                 id="statusActive"
                 name="status"
                 value="active"
-                checked
+                checked=(product.status === 'active' ? true : false)
             )
             label(for="statusActive" class="form-check-label") Hoạt động
         div(class="form-group form-check form-check-inline")
@@ -87,10 +115,13 @@ block main
                 id="statusInactive"
                 name="status"
                 value="inactive"
+                checked=(product.status === 'inactive' ? true : false)
             )
             label(for="statusActive" class="form-check-label") Dừng hoạt động
         div(class="form-group")
             button(
                 type="submit"
                 class="btn btn-primary"
-            ) Tạo mới
+            ) Chỉnh sửa
+
+    script(src="/admin/js/script.js") 
