--- a/src/views/admin/pages/products/index.pug
+++ b/src/views/admin/pages/products/index.pug
@@ -97,7 +97,10 @@ block main
                                             href=`${prefixAdmin}/products/detail/${item.id}` 
                                             class="btn btn-secondary btn-sm me-2"
                                             ) Chi tiết
-                                        button(class="btn btn-warning btn-sm") Sửa
+                                        a(
+                                            class="btn btn-warning btn-sm"
+                                            href=`${prefixAdmin}/products/edit/${item.id}`
+                                            ) Sửa
                                         button(
                                             class=`btn ${nameTitle.classBtn} btn-sm ms-2`
                                             button-delete
