up edit product

--- a/src/views/admin/pages/products/edit.pug
+++ b/src/views/admin/pages/products/edit.pug
@@ -4,7 +4,7 @@ block main
     h1(class="mb-4") #{pageTitle}
 
     form(
-        action=`${prefixAdmin}/products/create`
+        action=`${prefixAdmin}/products/edit/${product.id}?_method=PATCH`
         id="form-create-product"
         method="POST"
         enctype="multipart/form-data"
