--- a/src/views/admin/pages/products/create.pug
+++ b/src/views/admin/pages/products/create.pug
@@ -1,4 +1,5 @@
 extends ../../layout/default.pug
+include ../../mixins/select-tree.pug
 
 block main
     h1(class="mb-4") Thêm mới sản phẩm
@@ -18,6 +19,17 @@ block main
                 name="title"
                 required
             )
+        div(class="form-group")
+            label(for="product_category_id") Danh mục cha
+            select(
+                name="product_category_id"
+                id="product_category_id"
+                class="form-control"
+            )
+                option(value="") -- Chọn Danh mục --
+                if(category)
+                    +select-tree(category)
+
         div(class="form-group")
             label(for="description") Mô tả
             textarea(
