--- a/src/views/admin/pages/products/edit.pug
+++ b/src/views/admin/pages/products/edit.pug
@@ -1,4 +1,5 @@
 extends ../../layout/default
+include ../../mixins/select-tree.pug
 
 block main 
     h1(class="mb-4") #{pageTitle}
@@ -19,6 +20,16 @@ block main
                 required
                 value=product.title
             )
+        div(class="form-group")
+            label(for="product_category_id") Danh mục cha
+            select(
+                name="product_category_id"
+                id="product_category_id"
+                class="form-control"
+            )
+                option(value="") -- Chọn Danh mục --
+                if(category)
+                    +select-tree(category, 1, product.product_category_id)
         div(class="form-group")
             label(for="description") Mô tả
             textarea(
