--- a/src/views/admin/partials/sider.pug
+++ b/src/views/admin/partials/sider.pug
@@ -11,6 +11,9 @@ mixin sider()
                 li.d-flex.align-items-center
                     i(class="fa-solid fa-boxes-stacked fs-6")
                     a(href=`${prefixAdmin}/products-category`) Danh mục sản phẩm
+                li.d-flex.align-items-center
+                    i(class="fa-solid fa-users-gear")
+                    a(href=`${prefixAdmin}/roles`) Nhóm quyền
 
         .last-trash.align-items-start.flex-column.mb-1
             ul.list-group
