up detail, delete roles

--- a/src/views/admin/partials/sider.pug
+++ b/src/views/admin/partials/sider.pug
@@ -14,7 +14,9 @@ mixin sider()
                 li.d-flex.align-items-center
                     i(class="fa-solid fa-users-gear")
                     a(href=`${prefixAdmin}/roles`) Nhóm quyền
-
+                li.d-flex.align-items-center
+                    i(class="fa-solid fa-user-astronaut")
+                    a(href=`${prefixAdmin}/roles/permissions`) Phân quyền
         .last-trash.align-items-start.flex-column.mb-1
             ul.list-group
                 li.d-flex.align-items-center
