--- a/src/views/admin/pages/roles/create.pug
+++ b/src/views/admin/pages/roles/create.pug
@@ -15,7 +15,7 @@ block main
                 name="title"
                 required
             )
-        div(class="form-group")
+        div(class="form-group mb-2")
             label(for="description") Mô tả
             input(
                 type="text"
