--- a/src/views/admin/pages/roles/edit.pug
+++ b/src/views/admin/pages/roles/edit.pug
@@ -29,5 +29,5 @@ block main
         div(class="form-group")
             button(
                 type="submit"
-                class="btn btn-primary"
-            ) Tạo mới
+                class="btn btn-primary mt-2"
+            ) Chỉnh sửa
