--- a/src/views/admin/pages/roles/index.pug
+++ b/src/views/admin/pages/roles/index.pug
@@ -33,7 +33,7 @@ block main
                                 td
                                     a(
                                         class="btn btn-secondary btn-sm"
-                                        href=`/${prefixAdmin}/roles/detail/${item.id}`
+                                        href=`${prefixAdmin}/roles/detail/${item.id}`
                                     ) Chi tiết
                                     a(
                                         class="btn btn-warning btn-sm ml-1 ms-2"
@@ -41,6 +41,8 @@ block main
                                     ) Sửa
                                     button(
                                         class="btn btn-danger btn-sm ml-1 ms-2"
+                                        button-delete
+                                        data-id=item.id
                                     ) Xoá
                     else
                         table.table.table-hover.table-sm
@@ -52,3 +54,11 @@ block main
                                     th Hành động
                         h1.text-danger.text-center Không tìm thấy Phân quyền nào!
 
+    form(
+        action=""
+        method="POST"
+        id="form-delete"
+        data-path=`${prefixAdmin}/roles/delete`
+    )
+
+    script(src="/admin/js/role.js")
