up permission, roles

--- a/src/views/admin/pages/roles/index.pug
+++ b/src/views/admin/pages/roles/index.pug
@@ -28,7 +28,7 @@ block main
                         each item, index in records
                             tr 
                                 td #{index + 1}
-                                td #{item.title}
+                                td(class="text-item") #{item.title}
                                 td #{item.description}
                                 td
                                     a(
