--- a/src/views/admin/partials/sider.pug
+++ b/src/views/admin/partials/sider.pug
@@ -17,6 +17,9 @@ mixin sider()
                 li.d-flex.align-items-center
                     i(class="fa-solid fa-user-astronaut")
                     a(href=`${prefixAdmin}/roles/permissions`) Phân quyền
+                li.d-flex.align-items-center
+                    i(class="fa-solid fa-user-astronaut")
+                    a(href=`${prefixAdmin}/accounts`) Danh sách tài khoản
         .last-trash.align-items-start.flex-column.mb-1
             ul.list-group
                 li.d-flex.align-items-center
